# MPI_CUDA

./: .gitignore  CMakeLists.txt  README.md  run.sh
data/: config_n_body.json  random_N100.txt  random_N2000.txt  random_N500.txt  solar_4.txt  solar_9.txt
results/: nbody_batch_summary.csv
results/nbody_cpu/: metrics_cpu.txt  simulation_report.txt  trajectories.csv
results/nbody_cuda/: metrics_cuda.txt  simulation_report.txt
scripts/: batch_run_task2.py  generate_random_inputs.py  plot_orbits.py  plot_performance.py  rebuild_task2.ps1  run_once.ps1
scripts/results/nbody_cpu/: metrics_cpu.txt
scripts/results/nbody_cuda/: metrics_cuda.txt
src/: n_body.cu  n_body_cpu.c  n_body_cuda.cu
task2/: CMakeLists.txt
